--- a/JKIguatemi/JKIguatemi.entitlements
+++ b/JKIguatemi/JKIguatemi.entitlements
@@ -3,6 +3,8 @@
 <plist version="1.0">
 <dict>
 	<key>com.apple.developer.in-app-payments</key>
-	<array/>
+	<array>
+		<string>merchant.com.aKANJ.JKIguatemi.applepay</string>
+	</array>
 </dict>
 </plist>
